fixing padding in nav to work on iphones

--- a/source/stylesheets/base.css.scss
+++ b/source/stylesheets/base.css.scss
@@ -123,7 +123,7 @@ nav{
 	}
 	ul{
 		float: right;
-		padding: 32px 30px;
+		padding: 32px 30px 32px 0;
 		margin: 0;
 		li{
 			margin-left: 40px;
